# loco_fast_store

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
.github/workflows/: ci.yaml
assets/static/css/: app.css
assets/static/js/: app.js  store-sdk.js
assets/views/admin/: dashboard.html  login.html  setup.html
assets/views/painel/: dashboard.html  login.html
assets/views/store/: .gitkeep  carrinho.html  checkout.html  favoritos.html  home.html  produto.html  produtos.html
config/: development.yaml  test.yaml
docs/: ADMIN_GUIDE.md  ADMIN_PANEL_SPEC.md  ALPINE_SDK.md  INSTALACAO_RAPIDA.md  README_ADMIN.md  RESUMO_IMPLEMENTACAO.md  SETUP_E_USUARIOS.md
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260225_000002_stores.rs  m20260225_000003_categories.rs  m20260225_000004_products.rs  m20260225_000005_product_variants_prices_images.rs  m20260225_000006_collections.rs  m20260225_000007_customers_addresses.rs  m20260225_000008_carts.rs  m20260225_000009_orders.rs  m20260226_000010_store_collaborators_shippings.rs  m20260227_000011_remove_stores.rs  m20260228_000012_warehouses_items_stocks.rs  m20260228_000013_add_user_role.rs
scripts/: asaas_env.sh  test_asaas_token.sh
src/: app.rs  env.rs  lib.rs
src/controllers/: admin_dashboard.rs  admin_users.rs  auth.rs  carts.rs  categories.rs  collections.rs  customers.rs  dashboard.rs  guards.rs  items.rs  mod.rs  orders.rs  painel.rs  painel_api.rs  payments.rs  products.rs  setup.rs  stocks.rs  stores.rs  warehouses.rs
src/dto/: entities.rs  mod.rs  response.rs
src/initializers/: analytics_tracker.rs  asaas_webhooks.rs  mod.rs  view_engine.rs
src/models/: carts.rs  categories.rs  collections.rs  customers.rs  items.rs  mod.rs  order_shippings.rs  orders.rs  product_variants.rs  products.rs  stocks.rs  store_collaborators.rs  stores.rs  users.rs  warehouses.rs
src/services/: analytics.rs  asaas.rs  mod.rs  upload.rs
src/shipping/: melhor_envio.rs  mod.rs
src/workers/: abandoned_cart.rs  analytics_flush.rs  lead_scoring.rs  mod.rs
tests/models/: users.rs
tests/requests/: auth.rs  prepare_data.rs
(+42 files in other folders)
